@@ -1,0 +1,32 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<test-data>
+    <test-code>
+        <description>
+        	<![CDATA[
+classic failure case
+     		]]>
+     	</description>
+        <expected-problems>1</expected-problems>
+        <code>
+        	<![CDATA[
+public class Foo 
+{
+	public void bar()
+	{
+		try {
+			// Here do some stuff
+		}
+		catch( Exception e) {
+			// Handling the issue
+		}
+		finally 
+		{
+			// is this really a good idea ?
+			throw new Exception();
+		}
+	}
+}
+     		]]>
+     	</code>
+    </test-code>
+</test-data>
